test(fixture): 위치 객체 테스트 픽스처 적용